CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(tester)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -DELPP_NO_DEFAULT_LOG_FILE -DELPP_THREAD_SAFE -pthread")
SET(SRC_BASE ${PROJECT_SOURCE_DIR})
SET(SRC_TESTER ${SRC_BASE}/tester.cc
            ${SRC_BASE}/simple_case.cc
    )

INCLUDE_DIRECTORIES(
    ${SRC_BASE}/../src/include
    ${SRC_BASE}/../third_party
    )

ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_TESTER})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} pthread dl)

